# llms

./: .gitignore  LICENSE  RAG_Chatbot_KGs.ipynb  langchain.ipynb  llama-index.ipynb  rag-experiments.ipynb  requirements.txt  starter-notebook.ipynb
analytics-ai/: Untitled.ipynb  pyproject.toml
analytics-ai/mlruns/0/: meta.yaml
analytics-ai/mlruns/0/12ab764b896b48998f6dc55cdd49155d/: meta.yaml
analytics-ai/mlruns/0/12ab764b896b48998f6dc55cdd49155d/artifacts/: eval_results_table.json
analytics-ai/mlruns/0/12ab764b896b48998f6dc55cdd49155d/tags/: mlflow.log-model.history  mlflow.runName
analytics-ai/mlruns/0/33cd69b81eec488794898d6151c2bb17/: meta.yaml
analytics-ai/mlruns/0/33cd69b81eec488794898d6151c2bb17/artifacts/: eval_results_table.json
analytics-ai/mlruns/0/33cd69b81eec488794898d6151c2bb17/tags/: mlflow.log-model.history  mlflow.runName
analytics-ai/mlruns/0/3b55908e9f224bb39da4a21249b48bb0/: meta.yaml
analytics-ai/mlruns/0/3b55908e9f224bb39da4a21249b48bb0/artifacts/: eval_results_table.json  (+1 more)
analytics-ai/mlruns/0/65fff122d89d45338e75bb0524811dee/: meta.yaml
analytics-ai/mlruns/0/7dadd2a86bd346ec8f6d1c0f79bdea5b/: meta.yaml
analytics-ai/mlruns/0/9e3196df14d24cb9bf82b2a9a5d0f33e/: meta.yaml
analytics-ai/mlruns/0/a779622210664cb08ed59cde4feb1c92/: meta.yaml
analytics-ai/mlruns/0/b6a1ba3de7ad405aaa4f3da7201bd494/: meta.yaml
analytics-ai/notebooks/: experiments.ipynb
analytics-ai/notebooks/mlflow/: evaluation_llm_huggingface.ipynb
genai-langchain-gcp/: pyproject.toml
genai-langchain-gcp/notebooks/: primitives-chains-runnables.ipynb
(+284 files in other folders)
